# tuz-lang

./: .clang-format  CMakeLists.txt  README.md
examples/: fibonacci.tz  hello.tz  loops.tz  print.tz
include/tuz/: ast.h  codegen.h  driver.h  lexer.h  parser.h  token.h  type.h
src/: ast.cpp  codegen.cpp  driver.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  type.cpp
